force-app/main/default/objects/Project_Res_Assign__c/Project_Res_Assign__c.object-meta.xml
<CustomObject>
    <description>This helps avoid future conflicts and identify individual consultants&apos; workload as well as role based demand.  Actual activity is tracked via calendar events and timelines.</description>
    <label>Resource Assignment</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Res Assignment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>