force-app/main/default/objects/Project_Res_Assign__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <label>Project</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipName>R00N50000001dKAyEAM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>