force-app/main/default/objects/Project_Res_Assign__c/listViews/AllResourceAssignments.listView-meta.xml
<ListView>
    <fullName>AllResourceAssignments</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Resource_Role__c</columns>
    <columns>Projects__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <columns>Effective_End_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Resource Assignments</label>
    <language>en_US</language>
</ListView>